--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,19 @@ CLIENT_URL=http://localhost:5173
 
 # LOGS
 LOG_LEVEL=info
-LOG_QUERIES=true
+LOG_TO_FILE=true
+
+# CORS
+CORS_ALLOWED_ORIGINS=http://localhost:5173,https://your-app-name.vercel.app
 
 # TOKEN
-JWT_ACCESS_SECRET=your-jwt-access-secret
-JWT_REFRESH_SECRET=your-jwt-refresh-secret
+JWT_ACCESS_SECRET=your_jwt_access_secret
+JWT_REFRESH_SECRET=your_jwt_refresh_secret
 ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_EXPIRY=1w
+
+# SUPABASE
+SUPABASE_URL=your_supabase_url
+SUPABASE_SERVICE_KEY=your_supabase_service_key
+DATABASE_URL=your_database_url
+DIRECT_URL=your_direct_url
