--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.17",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9.35.0",
     "prettier": "^3.6.2",
     "prisma-dbml-generator": "^0.12.0",
