--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.17",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9.35.0",
     "prettier": "^3.6.2",
@@ -52,6 +54,8 @@
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "sharp": "^0.34.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
   }
