--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,9 @@ DIRECT_URL=your_direct_url
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 OAUTH_CALLBACK_URL=http://localhost:3000/api/v1/auth
+
+# MOMO
+MOMO_PARTNER_CODE=your_momo_partner_code
+MOMO_ACCESS_KEY=your_momo_access_key
+MOMO_SECRET_KEY=your_momo_secret_key
+MOMO_API_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
