--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/server.js",
     "build": "tsc && tsc-alias",
     "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/index.seed.ts",
     "seed:staging": "dotenv -e .env.staging -- ts-node -r tsconfig-paths/register prisma/seeds/index.seed.ts",
@@ -14,7 +15,13 @@
     "seed:vehicles": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/vehicles.seed.ts",
     "seed:batteries": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/batteries.seed.ts",
     "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed",
-    "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging"
+    "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint:fix"
+    ]
   },
   "keywords": [],
   "author": "DoQuangDung",
@@ -36,6 +43,8 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "dotenv-cli": "^10.0.0",
     "eslint": "^9.35.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
     "prisma-dbml-generator": "^0.12.0",
     "ts-node-dev": "^2.0.0",
