--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/server.ts",
     "start": "node dist/server.js",
     "build": "tsc && tsc-alias",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/index.seed.ts",
     "seed:staging": "dotenv -e .env.staging -- ts-node -r tsconfig-paths/register prisma/seeds/index.seed.ts",
@@ -28,6 +28,7 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@faker-js/faker": "^9.9.0",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
@@ -42,7 +43,7 @@
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "dotenv-cli": "^10.0.0",
-    "eslint": "^9.35.0",
+    "eslint": "^9.37.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
@@ -50,7 +51,8 @@
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
