feat: add step to generate Prisma Client in CI/CD workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Run linter
         run: npm run lint
 
+      - name: Generate Prisma Client
+        run: npx prisma generate
+
       - name: Build project
         run: npm run build
 
