--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "npm"
 
       - name: Install dependencies
-        run: npm ci # Dùng npm ci cho CI/CD để đảm bảo tính nhất quán
+        run: npm ci 
 
       - name: Run linter
         run: npm run lint
@@ -36,10 +36,10 @@ jobs:
 
   deploy-staging:
     name: Deploy to Staging
-    needs: build-and-test # Chạy sau khi build-and-test thành công
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push' # Đảm bảo chỉ chạy khi push lên develop
+    needs: build-and-test 
+    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
     runs-on: ubuntu-latest
-    environment: staging # Chỉ định môi trường để lấy secrets
+    environment: staging
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -56,7 +56,8 @@ jobs:
       - name: Run database migrations
         run: npx prisma migrate deploy
         env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }} # Lấy từ secret của môi trường 'staging'
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
 
       - name: Trigger Render Deploy
         uses: fjogeleit/http-request-action@v1
