--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,5 +65,7 @@ jobs:
           url: https://api.render.com/v1/services/${{ secrets.RENDER_SERVICE_ID }}/deploys
           method: POST
           customHeaders: |
-            Authorization: Bearer ${{ secrets.RENDER_API_KEY }}
-            Content-Type: application/json
+            {
+              "Authorization": "Bearer ${{ secrets.RENDER_API_KEY }}",
+              "Content-Type": "application/json"
+            }
