feat: implement checkout process with wallet and MoMo payment options

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "seed:users": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/users.seed.ts",
     "seed:vehicles": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/vehicles.seed.ts",
     "seed:batteries": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/batteries.seed.ts",
-    "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed",
+    "db:setup-cron": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/setup_cron.ts",
+    "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed && npm run db:setup-cron",
     "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging",
     "prepare": "husky"
   },
