--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ CLIENT_URL=http://localhost:5173
 LOG_LEVEL=info
 LOG_TO_FILE=true
 
+# GEMINI
+GEMINI_API_KEY=your_api_key_here
+
 # CORS
 CORS_ALLOWED_ORIGINS=http://localhost:5173,https://your-app-name.vercel.app
 
