--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed && npm run db:setup-cron",
     "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging",
     "prepare": "husky",
-    "validate-build": "tsc --noEmit"
+    "validate-build": "tsc --noEmit && tsc-alias"
   },
   "lint-staged": {
     "*.ts": [
@@ -58,6 +58,7 @@
     "typescript-eslint": "^8.46.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.14.0",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.2",
