feat: integrate Redis for authorization code exchange and enhance error handling

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ CLIENT_URL=http://localhost:5173
 LOG_LEVEL=info
 LOG_TO_FILE=true
 
+# REDIS
+REDIS_URL="your_redis_connection"
+
 # CORS
 CORS_ALLOWED_ORIGINS=http://localhost:5173,https://your-app-name.vercel.app
 
