--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^5.8.3",
     "sharp": "^0.34.3",
     "winston": "^3.17.0",
     "zod": "^4.1.8"
