feat: add auction start time and related validations for auction deposits

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 NODE_ENV=development
 CLIENT_URL=http://localhost:5173
+SERVER_URL=https://xxx.ngrok-free.app/api/v1
 
 # LOGS
 LOG_LEVEL=info
