--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,10 @@ MOMO_PARTNER_CODE=your_momo_partner_code
 MOMO_ACCESS_KEY=your_momo_access_key
 MOMO_SECRET_KEY=your_momo_secret_key
 MOMO_API_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
+
+# SMTP Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false # true for 465, false for other ports
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-gmail-app-password
