--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "seed:vehicles": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/vehicles.seed.ts",
     "seed:batteries": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/batteries.seed.ts",
     "db:setup-cron": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/setup_cron.ts",
+    "db:setup-cron:staging": "dotenv -e .env.staging -- ts-node -r tsconfig-paths/register prisma/setup_cron.ts",
     "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed && npm run db:setup-cron",
-    "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging",
+    "db:reset:staging": "dotenv -e .env.staging -- npx prisma migrate reset --force && npm run seed:staging && npm run db:setup-cron:staging",
     "prepare": "husky",
     "validate-build": "tsc --noEmit && tsc-alias"
   },
