--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^24.29.1",
     "redis": "^5.8.3",
     "sharp": "^0.34.3",
     "supertest": "^7.1.4",
