--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed:users": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/users.seed.ts",
     "seed:vehicles": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/vehicles.seed.ts",
     "seed:batteries": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/seeds/batteries.seed.ts",
+    "db:migrate:staging": "dotenv -e .env.staging -- npx prisma migrate dev",
     "db:setup-cron": "dotenv -e .env -- ts-node -r tsconfig-paths/register prisma/setup_cron.ts",
     "db:setup-cron:staging": "dotenv -e .env.staging -- ts-node -r tsconfig-paths/register prisma/setup_cron.ts",
     "db:reset": "dotenv -e .env -- npx prisma migrate reset --force && npm run seed && npm run db:setup-cron",
