refactor: replace nodemailer with Resend for email service

--- a/.env.example
+++ b/.env.example
@@ -39,9 +39,5 @@ MOMO_ACCESS_KEY=your_momo_access_key
 MOMO_SECRET_KEY=your_momo_secret_key
 MOMO_API_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create
 
-# SMTP Email Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false # true for 465, false for other ports
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-gmail-app-password
+# RESEND API KEY
+RESEND_API_KEY=enter_your_api_key
