--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^7.0.3",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/supertest": "^6.0.3",
@@ -92,11 +91,11 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.29.1",
     "redis": "^5.8.3",
+    "resend": "^6.4.2",
     "sharp": "^0.34.3",
     "supertest": "^7.1.4",
     "winston": "^3.17.0",
