--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
+    "prisma": "^6.14.0",
     "prisma-dbml-generator": "^0.12.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
