feat: Implement background job processing with BullMQ for scheduled tasks and email handling

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.63.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -97,6 +98,7 @@
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.30.0",
     "redis": "^5.8.3",
+    "redis-url-parser": "^0.0.3",
     "resend": "^6.4.2",
     "sharp": "^0.34.3",
     "supertest": "^7.1.4",
